# btx

./: .baldr.yaml  .gitignore  BTXS_SPECIFICATION.md  CMakeLists.txt  CNAME  FUTURE.md  LICENSE  README.md  SPECIFICATION.md  conandata.yml  conanfile.py  index.md
.github/workflows/: ci.yml
btx/: CMakeLists.txt  btx.c  btx.h  btx.test.c  main.c  main.cpp
btx-cli/: CMakeLists.txt  main.c  main.cpp
cmake/: compiler-settings.cmake  compiler-warnings.cmake  dependencies.cmake
include/btx/: btx.h
libbtx/: CMakeLists.txt  btx.c  btx.h  btx.test.c
src/: btx.c  main.c
tests/: CMakeLists.txt  btx.test.c  common.sh
tests/decode/: driver.sh
tests/encode/: driver.sh
tests/errors/: driver.sh
tests/roundtrip/: driver.sh
tests/validate/: driver.sh
